--- a/polls/templates/update.html
+++ b/polls/templates/update.html
@@ -8,6 +8,7 @@
 <form action="{% url 'polls:update' form.instance.id %}" method="POST">
   {% csrf_token %}
   {% for field in form %}
+    {{ field.errors }}
     {{ field.label }} {{ field }}
   {% endfor %}
   <input type = "submit" value = "Update">
